# config_lang_tool

./: README.md  pyproject.toml
config_tool/: __init__.py  cli.py  errors.py  parser.py
examples/: course.cfg  shop.cfg
tests/: test_parser.py
