[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "config_tool"
version = "0.1.0"
description = "Учебный инструмент: преобразование конфигурационного языка в JSON"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["lark>=1.1.9"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
config-tool = "config_tool.cli:main"
